Fix front matter formatting in markdown file

--- a/collections/_projects/2025-08-04-stampel.markdown
+++ b/collections/_projects/2025-08-04-stampel.markdown
@@ -1,6 +1,6 @@
 ---
 layout: page
-title; "Tillverka din egen metallstämpel"
+title: "Tillverka din egen metallstämpel"
 modal-id: 4
 image: /images/stamplar_900x650.png
 alt: stämplar
